--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Privacy Policy for Notes without ads - for free</title>
+    <title>Privacy Policy for Notes</title>
     <meta charset="utf-8">
 </head>
 
@@ -10,7 +10,7 @@
     <div class="page">
         <div class="header">
             <div class="container">
-                <p class="title">Privacy Policy for Notes without ads - for free</p>
+                <p class="title">Privacy Policy for Notes</p>
             </div>
         </div>
         <div class="translations-content-container">
@@ -31,10 +31,10 @@
                             <p><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party, where &quot;control&quot; means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</p>
                         </li>
                         <li>
-                            <p><strong>Application</strong> refers to Notes without ads - for free, the software program provided by the Company.</p>
+                            <p><strong>Application</strong> refers to Notes, the software program provided by the Company.</p>
                         </li>
                         <li>
-                            <p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Notes without ads - for free.</p>
+                            <p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Notes.</p>
                         </li>
                         <li>
                             <p><strong>Country</strong> refers to: Morocco</p>
